<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<android.support.constraint.ConstraintLayout
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/product_order_form_height">

    <ImageView
        android:id="@+id/product_img"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:src="@drawable/bg_product" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_grey_700"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toEndOf="@id/product_img"
        app:layout_constraintTop_toTopOf="@id/product_img"
        app:layout_constraintBottom_toBottomOf="@id/product_img"
        android:layout_marginStart="@dimen/spacing_large"
        tools:text="The skydriver" />

    <ImageView
        android:id="@+id/down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_large"
        app:layout_constraintTop_toTopOf="@id/product_name"
        app:layout_constraintBottom_toBottomOf="@id/product_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/vd_down_arrow" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_grey_400"
        android:textSize="@dimen/font_size_medium"
        android:fontFamily="sans-serif-medium"
        android:layout_marginEnd="@dimen/spacing_large"
        app:layout_constraintTop_toTopOf="@id/down_arrow"
        app:layout_constraintBottom_toBottomOf="@id/down_arrow"
        app:layout_constraintEnd_toStartOf="@id/down_arrow"
        tools:text="45$" />

    <ViewSwitcher
        android:id="@+id/switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inAnimation="@anim/slide_in_right"
        android:outAnimation="@anim/slide_out_left"
        app:layout_constraintTop_toBottomOf="@id/product_img"
        android:layout_marginTop="@dimen/spacing_large">

        <include
            android:id="@+id/layout_step1"
            layout="@layout/layout_order_form1"
            />

        <include
            android:id="@+id/layout_step2"
            layout="@layout/layout_order_form2"
            />
    </ViewSwitcher>

    <FrameLayout
        android:id="@+id/btn_go"
        android:layout_width="160dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/switcher"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_big"
        android:background="@color/product_purple">
        <TextView
            android:id="@+id/text_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textAllCaps="false"
            android:layout_gravity="center"/>
    </FrameLayout>

    <TextView
        android:id="@+id/option1_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_size"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/blue_grey_700"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintTop_toTopOf="@id/btn_go"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_big" />

    <TextView
        android:id="@+id/option2_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_color"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/blue_grey_700"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toBottomOf="@id/btn_go"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_big"/>

</android.support.constraint.ConstraintLayout>
</FrameLayout>